--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
+/* Ou altura fixa landscape */
+.h-40 {
+  /* 160px - bom para cards */
+  height: 10rem;
+}
+
+.h-52 {
+  /* 208px - um pouco mais alto */
+  height: 13rem;
+}
